Search correctly for inline ancestors without a sibling when dirtying lineboxes

Fixes a mistake in https://codereview.chromium.org/2486423003 - it should have
checked whether the current child has a previous sibling, not the candidate parent.

Also revert to the original version of the two tests - as the new versions never
fail.

BUG=695378

Review-Url: https://codereview.chromium.org/2828553002
Cr-Commit-Position: refs/heads/master@{#465686}

Former-commit-id: c7a0755ef5b59863b714ceaa988a57c882195f86